--- a/index.html
+++ b/index.html
@@ -5,8 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>rest-countries</title>
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
+
+ <h3>Rest countries I am coming to you</h3>
+   <div id="countries" class="contriess">
+
+   </div>
+
     <script src="/script.js"></script>
 </body>
 </html>
